More cleanup of 2019 code